updated notebook and command

--- a/workspace/neuro_dot/NeuroDot_FullProcessingPipeline.ipynb
+++ b/workspace/neuro_dot/NeuroDot_FullProcessingPipeline.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -99,16 +100,16 @@
    "outputs": [],
    "source": [
     "# Set parameters for A and block length for quick processing examples\n",
-    "if 'CCW1' in participant_data or 'CCW2' in participant_data or 'CW1' in participant_data or 'OUT' in participant_data:\n",
+    "if 'CCW' in participant_data or 'CCW' in participant_data or 'CW' in participant_data or 'OUT' in participant_data:\n",
     "    A_fn='/Project/A_matricies/A_AdultV24x28.mat' #  Sensitivity Matrix (path to A matrix on your machine! this file is too large to go in the GitHub repo being worked out of)\n",
     "    params['dt']=36                     # Block length\n",
     "    params['tp']=16                     # Example (block averaged) time point\n",
-    "if 'IN1' in participant_data:\n",
+    "if 'IN' in participant_data:\n",
     "    A_fn='/Project/A_matricies/A_AdultV24x28.mat' # Sensitivity Matrix\n",
     "    params['dt']=36                     # Block length\n",
     "    params['tp']=32                     # Example (block averaged) time point\n",
     "\n",
-    "if  'HW1'in participant_data or'HW2' in participant_data or'RW1' in participant_data or'GV1'in participant_data or'HW3-Noisy' in participant_data:\n",
+    "if  'HW' in participant_data or 'GV' in participant_data or 'CV' in participant_data or 'OV' in participant_data:\n",
     "    A_fn='/Project/A_matricies/A_Adult_96x92.mat'  # Sensitivity Matrix\n",
     "    params['dt']=30                     # Block length\n",
     "    params['tp']=16                     # Example (block averaged) time point"
