updated A matrix load logic

--- a/workspace/neuro_dot/NeuroDot_FullProcessingPipeline.ipynb
+++ b/workspace/neuro_dot/NeuroDot_FullProcessingPipeline.ipynb
@@ -759,7 +759,7 @@
     "A = None\n",
     "if A is None:\n",
     "    A = {}\n",
-    "    if  'HW1'in participant_data or'HW2' in participant_data or'RW1' in participant_data or'GV1'in participant_data or'HW3-Noisy' in participant_data:\n",
+    "    if  'HW'in participant_data or'CV' in participant_data or'RW' in participant_data or'GV'in participant_data or'OV' in participant_data:\n",
     "        A['A'] = io.loadmat7p3(A_fn)['A']\n",
     "        A['infoA'] = io.loadmat7p3(A_fn)['info']\n",
     "        for key in A['infoA']['tissue']['dim']:\n",
