--- a/workspace/neuro_dot/NeuroDot_FullProcessingPipeline.ipynb
+++ b/workspace/neuro_dot/NeuroDot_FullProcessingPipeline.ipynb
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "participant_data = \"E:/python_codes/NeuroDOT_py_dev/Data/NeuroDOT_Data_Sample_HW1_py.mat\"\n",
+    "participant_data = \"/Users/Yash/Documents/neurodot workshop july 2023/data/subjects/sub-01/ses-01/scan-01/nirs/1421_CV001_190419_230531_ES.mat\"\n",
     "params_file = \"./Project/params_files/params.txt\"\n",
     "saveImages = 'yes'"
    ]
@@ -101,16 +101,16 @@
    "source": [
     "# Set parameters for A and block length for quick processing examples\n",
     "if 'CCW' in participant_data or 'CCW' in participant_data or 'CW' in participant_data or 'OUT' in participant_data:\n",
-    "    A_fn='/Project/A_matricies/A_AdultV24x28.mat' #  Sensitivity Matrix (path to A matrix on your machine! this file is too large to go in the GitHub repo being worked out of)\n",
+    "    A_fn='/Project/A_matrices/A_AdultV24x28.mat' #  Sensitivity Matrix (path to A matrix on your machine! this file is too large to go in the GitHub repo being worked out of)\n",
     "    params['dt']=36                     # Block length\n",
     "    params['tp']=16                     # Example (block averaged) time point\n",
     "if 'IN' in participant_data:\n",
-    "    A_fn='/Project/A_matricies/A_AdultV24x28.mat' # Sensitivity Matrix\n",
+    "    A_fn='/Project/A_matrices/A_AdultV24x28.mat' # Sensitivity Matrix\n",
     "    params['dt']=36                     # Block length\n",
     "    params['tp']=32                     # Example (block averaged) time point\n",
     "\n",
     "if  'HW' in participant_data or 'GV' in participant_data or 'CV' in participant_data or 'OV' in participant_data:\n",
-    "    A_fn='/Project/A_matricies/A_Adult_96x92.mat'  # Sensitivity Matrix\n",
+    "    A_fn='/Project/A_matrices/A_Adult_96x92.mat'  # Sensitivity Matrix\n",
     "    params['dt']=30                     # Block length\n",
     "    params['tp']=16                     # Example (block averaged) time point"
    ]
@@ -789,7 +789,7 @@
     "    cortex_mu_a[:, :, j-1] = recon.reconstruct_img(rdata[keep, :], iA)  # Reconstruct Image Volume \n",
     "\n",
     "# Spectroscopy\n",
-    "Emat = '/Project/E_matricies/E.mat' \n",
+    "Emat = '/Project/E_matrices/E.mat' \n",
     "if E is None:    \n",
     "    E = io.loadmat(Emat)['E']\n",
     "cortex_Hb = recon.spectroscopy_img(cortex_mu_a, E) \n",
@@ -962,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
