updated E_mat loader

--- a/workspace/neuro_dot/NeuroDot_FullProcessingPipeline.ipynb
+++ b/workspace/neuro_dot/NeuroDot_FullProcessingPipeline.ipynb
@@ -794,7 +794,7 @@
     "# Spectroscopy\n",
     "Emat = '/Project/E_matrices/E.mat' \n",
     "if E is None:    \n",
-    "    E = io.loadmat(Emat)['E']\n",
+    "    E = io.loadmat7p3(Emat)['E']\n",
     "cortex_Hb = recon.spectroscopy_img(cortex_mu_a, E) \n",
     "cortex_HbO = cortex_Hb[:, :, 0]\n",
     "cortex_HbR = cortex_Hb[:, :, 1]\n",
